RESOLVED FIXED270430
Some media module files are missing headers
https://bugs.webkit.org/show_bug.cgi?id=270430
Summary Some media module files are missing headers
Marcos Caceres
Reported 2024-03-03 21:45:24 PST
The following files are missing header some includes, which can result in failures: * Source/WebCore/Modules/mediasession/MediaSessionCoordinator.cpp * Source/WebCore/Modules/mediasource/MediaSourceHandle.cpp * Source/WebCore/Modules/mediasource/MediaSourceHandle.h
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-03 21:46:59 PST
Marcos Caceres
Comment 2 2024-03-03 21:48:27 PST
EWS
Comment 3 2024-03-04 00:00:43 PST
Committed 275613@main (094154ff04b2): <https://commits.webkit.org/275613@main> Reviewed commits have been landed. Closing PR #25401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.