Some media modules files are missing headers https://bugs.webkit.org/show_bug.cgi?id=270430 rdar://123988923

Reviewed by Jean-Yves Avenard.

Imported missing header files for media related things.

* Source/WebCore/Modules/mediasession/MediaSessionCoordinator.cpp:
* Source/WebCore/Modules/mediasource/MediaSourceHandle.cpp:
* Source/WebCore/Modules/mediasource/MediaSourceHandle.h:

Canonical link: https://commits.webkit.org/275613@main